--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,5 @@ services:
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       DDNS_ROUTE53_ZONE_ID: ${DDNS_ROUTE53_ZONE_ID}
       DDNS_ROUTE53_RECORD_SET: ${DDNS_ROUTE53_RECORD_SET}
+      DDNS_ROUTE53_TTL: 60
 
